<resources>
    <string name="app_name">Veneto Corsi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >News</item>
        <item >Courses</item>
        <item >Help</item>
        <item>Update</item>
    </string-array>

    <string-array name="course_states">
        <item >PLANNED</item>
        <item >AVAILABLE</item>
        <item >CLOSED</item>
        <item >STARTED</item>
        <item >ENDED</item>
        <item>SUSPENDED</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->

    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_courses</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_update</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="internetNotAvailable">Internet is not available</string>
    <string name="title_activity_rss">RssActivity</string>
    <string name="str_link_rss_detail">Go to the web page</string>
    <string name="police_icon_description">Police Icon</string>
    <string name="course_icon_description">Course Icon</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="txt_subscribes">Subscribes</string>
    <string name="txt_max_sub">Availability</string>
    <string name="txt_lessons">Lessons</string>
    <string name="update_text">Updating...</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="text_greetings">This app is a project made by Jhonny Hueller and Gregory Sech.</string>
    <string name="jhonny_email">jh.hueller@gmail.com</string>
    <string name="jh_name">Jhonny hueller</string>
    <string name="seck_name">Gregory Sech</string>
    <string name="sech_email">gregory.sech@gmail.com</string>
    <string name="description_app_icon">App Icon</string>
</resources>
